bootstrap/templates/user1-ossm/v-user1-gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: winmesh-gateway
  namespace: user1-windowsmesh
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  labels:
    kiali_wizard: request_routing
spec:
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - user1-istio-system.apps.rosa-8w949.y97b.p1.openshiftapps.com
  selector:
    istio: ingressgateway
