bootstrap/templates/user1-ossm/v-user1-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: winmesh
  namespace: user1-windowsmesh
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - user1-istio-system.apps.rosa-8w949.y97b.p1.openshiftapps.com
  gateways:
    - user1-windowsmesh/winmesh-gateway
    - mesh
  http:
    - route:
        - destination:
            host: winmesh.user1-windowsmesh.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: winmesh.user1-windowsmesh.svc.cluster.local
            subset: v2
          weight: 50
