bootstrap/templates/user1-ossm/virtualservice_winmesh.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: winmesh
  namespace: user1-windowsmesh
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - '*.openshiftapps.com'
  gateways:
    - windowsmesh/winmesh-gateway
  http:
    - route:
        - destination:
            host: winmesh.user1-windowsmesh.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: winmesh.user1-windowsmesh.svc.cluster.local
            subset: v2
          weight: 50
